# other_odometry

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml  project_leg_odometry.md  project_leg_odometry_test_datasets.md
config/: ekf_params.yaml  fk_only_params.yaml
doc/: fk_only_odometry.md  leg_odometry_proposal.md  progress_report.md  simple_vs_hybrid_report.md
hybrid_cpp/: CMakeLists.txt  leg_odom_hybrid.cpp  leg_odom_node.cpp  test_kinematics.cpp
hybrid_cpp/smoother/: GTSAMSmoother.h
hybrid_cpp/state/: Kinematics.h
hybrid_cpp/update/: UpdaterFK.h  UpdaterFlatZ.h  UpdaterZUPT.h
include/leg_odometry/: so3_utils.h
include/leg_odometry/smoother/: GTSAMSmoother.h
include/leg_odometry/state/: Kinematics.h  Propagator.h  State.h
include/leg_odometry/update/: UpdaterFK.h  UpdaterZUPT.h
launch/: leg_odometry.launch.py  verify_mapping.launch.py
leg-odometry/: README.md  package.xml  project_leg_odometry_test_datasets.md
leg-odometry/config/: ekf_params.yaml  joint_mapping.yaml
leg-odometry/data/sim/csv/: curve_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/data/sim/csv/install/: local_setup.sh  setup.sh
leg-odometry/data/sim/csv/log/: latest_build
leg-odometry/data/sim/curve_walk/: metadata.yaml
leg-odometry/data/sim/figure_8/: metadata.yaml
leg-odometry/data/sim/long_walk/: metadata.yaml
leg-odometry/data/sim/mixed_walk/: metadata.yaml
leg-odometry/data/sim/office_walk/: metadata.yaml
leg-odometry/data/sim/rectangular_walk/: metadata.yaml
leg-odometry/data/sim/s_curve/: metadata.yaml
leg-odometry/data/sim/slope_up_down/: metadata.yaml
leg-odometry/data/sim/stop_and_go/: metadata.yaml
leg-odometry/data/sim/straight_fast/: metadata.yaml
leg-odometry/data/sim/straight_medium/: metadata.yaml
leg-odometry/data/sim/straight_slow/: metadata.yaml
leg-odometry/data/sim/turn_in_place/: metadata.yaml
leg-odometry/data/sim_results/results_cleanup/: curve_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/data/sim_results/results_eskf/: summary.csv
leg-odometry/data/sim_results/results_gtsam/: summary_gtsam.csv
leg-odometry/data/sim_results/results_gtsam_cpp/: curve_walk.csv  long_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/data/sim_results/results_hybrid/: summary_hybrid.csv
leg-odometry/data/sim_results/results_hybrid_cpp/: curve_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/data/sim_results/results_hybrid_cpp_flatvz/: curve_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/data/sim_results/results_hybrid_cpp_lockbg_nofb/: curve_walk.csv  figure_8.csv  mixed_walk.csv  office_walk.csv  rectangular_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/data/sim_results/results_hybrid_cpp_zupt/: curve_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/data/sim_results/results_python_lockbg_all/: curve_walk.csv  figure_8.csv  mixed_walk.csv  office_walk.csv  rectangular_walk.csv  s_curve.csv  slope_up_down.csv  stop_and_go.csv  straight_fast.csv  straight_medium.csv  straight_slow.csv  turn_in_place.csv
leg-odometry/doc/: demo_guide.md  leg_odometry_proposal.md
leg-odometry/include/leg_odometry/smoother/: leg_factors.h
leg-odometry/include/leg_odometry/state/: State.h  StateHelper.h
leg-odometry/include/leg_odometry/update/: UpdaterFK.h  UpdaterFlatZ.h  UpdaterZUPT.h
leg-odometry/launch/: fk_only_node.launch.py  leg_odometry.launch.py  simple_leg_odom.launch.py
leg-odometry/python/: ekf.py  kinematics.py  smoother.py
leg-odometry/scripts/: bag_to_csv.py  diag_sim2real.py  evaluate_hybrid.py  evaluate_sim.py  fk_body_travel.py  fk_sanity_check.py  fk_zoom.py  foot_velocity_check.py  generate_sim_data.py  joint_state_remapper.py
leg-odometry/src/: leg_odom_node.cpp  test_kinematics.cpp  test_leg_odom.cpp
leg_odometry/: ekf.py  gtsam_odom.py
navigation_interface/: CMakeLists.txt  package.xml
navigation_interface/msg/: WheelStatus.msg
python/: contact_detector.py  kinematics.py
rtabmap/: pub_camera_info.py  rtabmap_lightglue.py  run_smoke.sh
rviz/: leg.rviz
scripts/: ankle_z_stance.py  compare_cpp_py.py  contact_bias_diagnose.py  dump_leg_odom_csv.py  eval_drift.py  eval_real_bag.py  evaluate_gtsam.py  evaluate_hybrid.py  fk_only_odometry.py  plot_stage1_xy.py  run_bag_test.sh  verify_contact.py  visualize_leg_joints.py
src/: fk_only_node.cpp  leg_odom_hybrid.cpp  leg_odom_node.cpp  simple_leg_odom_node.cpp  test_kinematics.cpp
src/gtsam_cpp/: CMakeLists.txt  leg_odom_gtsam.cpp
wheel_odometry/: CMakeLists.txt  README.md  package.xml
wheel_odometry/config/: wheel_only_params.yaml
wheel_odometry/doc/: swerve_only_odometry.md
wheel_odometry/include/wheel_odometry/: so3_utils.h  swerve_kinematics.h
wheel_odometry/launch/: wheel_only_node.launch.py
wheel_odometry/scripts/: run_smoke.sh
wheel_odometry/src/: wheel_only_node.cpp
