<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leg_odometry</name>
  <version>0.2.0</version>
  <description>ESKF + GTSAM Hybrid leg odometry for CASBOT02 humanoid robot</description>
  <maintainer email="steve@todo.com">Steve</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>orocos_kdl</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
