<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_interface</name>
  <version>0.1.0</version>
  <description>Local stub of the deployed navigation_interface msg package.
  Holds the WheelStatus msg used by /robot/wheel_status. CDR wire format
  verified against bag Datasets/w2/rosbag2_2026_04_28-17_06_53.</description>
  <maintainer email="meitiever@gmail.com">steve</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
